<resources>
    <string name="app_name">수다잼</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="favorite">FAVORITE</string>
    <string name="search">SEARCH</string>
    <string name="setting">SETTING</string>

    <string name="initial_setting_greeting_title">여러분, 환영합니다!</string>
    <string name="initial_setting_greeting_guide">우리 아이에게 말을 걸어주는 영상과 함께 수다잼 하세요.</string>
    <string name="initial_setting_next">다음으로</string>
    <string name="initial_setting_apply">적용하기</string>
    <string name="initial_setting_skip">건너뛰기</string>

    <string name="initial_setting_name_title">아이의 이름을 알려주세요.</string>
    <string name="initial_setting_name_guide">자녀 이름을 입력하면 이름을 넣어서 말을 걸어 줍니다.</string>
    <string name="initial_setting_name_input_wrong_message">아이의 이름을 입력해주세요</string>
    <string name="initial_setting_name_input_hint_text">이름을 입력해주세요.</string>

    <string name="initial_setting_age_setting_title">아이의 연령에 따라 영상을 보여주세요.</string>
    <string name="initial_setting_age_0_2">  0-2세</string>
    <string name="initial_setting_age_3_5">  3-5세</string>
    <string name="initial_setting_age_6_7">  6-7세</string>
    <string name="initial_setting_age_all">전체</string>
    <string name="initial_setting_age_setting_guide_text">아이의 연령에 맞는 영상을 볼 수 있도록 연령을 설정할 수 있습니다.</string>

    <string name="finger_print_setting">지문 사용</string>
    <string name="finger_print_information">자녀의 무분별한 앱 사용을 방지할 수 있어요</string>

    <string name="initial_setting_limitied_time_title">시간 제한 설정에 맞춰 끝맺음 인사를 해줘요.</string>
    <string name="initial_setting_limitied_time_guide">아이가 영상을 멈추고 자연스럽게 다른 활동을 할 수 있도록 도와줍니다.</string>

    <string name="initial_setting_parent_title">부모님이 함께 참여해 주세요.</string>
    <string name="initial_setting_parents_guide_text">수다쟁이가 던져주는 질문은 아이와 나눌 대화의 주제가 될 수 있습니다.\n아이가 대답할 수 있도록 처음에는 부모님이 함께 해 주세요.</string>
    <string name="initial_setting_start">이제 시작해 볼까요?</string>

    <string name="chracter_main_button_chracter">캐릭터</string>
    <string name="chracter_main_button_video">동영상</string>
    <string name="favorite_layout_title">즐겨찾기</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <!-- For Finger Print -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">지문 인증</string>
    <string name="desc_fingerprint">인증을 위해 지문버튼위에 손가락을 올려주세요</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_finger_print">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>


    <!-- For Setting Activity -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>
</resources>
