<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gold"
    android:gravity="center">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scale_base_height="360"
        app:scale_base_width="740"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initial_setting_name_title"
            android:textColor="@android:color/black"
            android:fontFamily="@font/thejunggt160"
            app:scale_textsize="28"
            app:scale_left="112"
            app:scale_top="36"
            app:scale_width="516"
            app:scale_height="59" />

        <TextView
            android:id="@+id/txt_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/initial_setting_name_guide"
            android:textColor="@android:color/black"
            android:fontFamily="@font/thejunggt150"
            app:scale_textsize="17"
            app:scale_left="112"
            app:scale_top="75"
            app:scale_width="516"
            app:scale_height="59" />

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/setup_name_girl"
            android:clickable="false"
            app:scale_left="320.8"
            app:scale_top="108"
            app:scale_width="104"
            app:scale_height="122.7" />


        <EditText
            android:id="@+id/edittxt_initial_setting_name_baby_name"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:hint="@string/initial_setting_name_input_hint_text"
            android:maxLength ="10"
            android:textColorHint="#9b9b9b"
            android:fontFamily="@font/thejunggt140"
            android:imeOptions="flagNoExtractUi|actionGo"
            android:singleLine="true"
            app:scale_textsize="22"
            app:scale_left="268.5"
            app:scale_top="234.6"
            app:scale_height="50"
            app:scale_width="220" />

        <Button
            android:id="@+id/button_accept"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_initial_setting_white_to_blue"
            android:text="@string/initial_setting_apply"
            android:textColor="@color/text_button_black_white"
            android:fontFamily="@font/thejunggt160"
            app:scale_textsize="20"
            app:scale_left="230"
            app:scale_top="300"
            app:scale_width="130"
            app:scale_height="40" />

        <Button
            android:id="@+id/button_skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_initial_setting_white_to_blue"
            android:text="@string/initial_setting_skip"
            android:textColor="@color/text_button_black_white"
            android:fontFamily="@font/thejunggt160"
            app:scale_textsize="20"
            app:scale_left="380"
            app:scale_top="300"
            app:scale_width="130"
            app:scale_height="40" />
    </com.ssomai.android.scalablelayout.ScalableLayout>
</LinearLayout>