<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_cyan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/par"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/initial_setting_greeting_title"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/title_margen"
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/guideText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/initial_setting_greeting_guide"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <Space
                android:id="@+id/guide_margen"
                android:layout_width="match_parent"
                android:layout_height="4dp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hiddenCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:clickable="false"
        app:srcCompat="@drawable/setup_greeting" />

    <ImageView
        android:id="@+id/hiddenCenter"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/button_next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/hiddenCenter"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button_next"
        android:text="@string/initial_setting_next"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>